--- a/Interface/WindowsApplication1/MainForm.resx
+++ b/Interface/WindowsApplication1/MainForm.resx
@@ -934,4 +934,7 @@
         91HZtaoBa6CifcAGqNX3UQMV7X1Udq1qwBr4/wHjFZzMx/ae6AAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
