--- a/Interface/WindowsApplication1/My Project/Resources.resx
+++ b/Interface/WindowsApplication1/My Project/Resources.resx
@@ -117,14 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="countries" xml:space="preserve">
+    <value />
+  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="interstellar" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\interstellar.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="pulpfiction" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\pulpfiction.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="countries" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="countries1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\countries.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="usr_jpg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\usr.jpg.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
